--- a/index.html
+++ b/index.html
@@ -36,14 +36,14 @@
               <h3>Programing</h3>
               <p>
                 <ul>
-                  <li>c++ </li>
-                  <li>html</li>
-                  <li>css</li>
-                  <li>bootstrap</li>
-                  <li>js</li>
-                  <li>ejs</li>
-                  <li>node js</li>
-                  <li>matlab programing</li>
+                  <li>c++ ---------------------------------------</li>
+                  <li>html --------------------------------------</li>
+                  <li>css ---------------------------------------</li>
+                  <li>bootstrap ---------------------------------</li>
+                  <li>js ----------------------------------------</li>
+                  <li>ejs ---------------------------------------</li>
+                  <li>node js -----------------------------------</li>
+                  <li>matlab programing -------------------------</li>
                 </ul>
               </p>
             </div>
@@ -51,10 +51,10 @@
               <img class="requirements" src="requirements.png" width=25% alt="">
               <h3>Hobbies</h3>
               <p><ul>
-                <li>programing</li>
-                <li>reading novel</li>
-                <li>playing games</li>
-                <li>public speaking</li>
+                <li>------------------------------------- programing</li>
+                <li>------------------------------------ reading novel</li>
+                <li>----------------------------------- playing games</li>
+                <li>---------------------------------- public speaking</li>
               </ul></p>
             </div>
           </div>
